--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,21 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 header{
   background-color:rgba(59, 11, 114, 0.808);
 }
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+  
+.div1 { grid-area: 1 / 1 / 2 / 6; }
+.div2 { grid-area: 2 / 2 / 6 / 5; }
+.div3 { grid-area: 2 / 1 / 6 / 2; }
+.div4 { grid-area: 2 / 5 / 6 / 6; }
