--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,24 @@ header{
   background-color:rgba(59, 11, 114, 0.808);
 }
 
+.info_joueur {
+  display: grid;
+  grid-template-columns: 200px 400px;
+  grid-template-rows: 200px;
+  grid-column-gap: 10px;
+  grid-row-gap: 0px;
+  padding: 20px;
+  background-color:blueviolet;
+}
+
+.details_user {
+  display: grid;
+  grid-template-columns: 400px;
+  grid-template-rows: 50px 80px repeat(2, 35px);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
 .parent {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -19,3 +37,9 @@ header{
 .div2 { grid-area: 2 / 2 / 6 / 5; }
 .div3 { grid-area: 2 / 1 / 6 / 2; }
 .div4 { grid-area: 2 / 5 / 6 / 6; }
+
+.profile_pic{
+  width:192px;
+  height:192px;
+  border: 4px solid black;
+}
