--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,15 @@
 }
 
 html, body{
-  height:100%;
-} 
+  height: 100vh;
+}
 
 header > nav{
   background-color:#351c75;
+}
+
+main{
+  
 }
 
 .parent {
@@ -17,7 +21,7 @@ grid-template-columns: repeat(5, 1fr);
 grid-template-rows: repeat(5, 1fr);
 grid-column-gap: 0px;
 grid-row-gap: 0px;
-height: 100%;
+min-height: 100vh;
 }
 
 .centre { 
@@ -58,6 +62,7 @@ height: 100%;
   height:200px;
   border: 4px solid black;
 }
+
 .info_joueur {
   display: grid;
   grid-template-columns: 200px 400px;
